--- a/src/style.css
+++ b/src/style.css
@@ -24,12 +24,28 @@ h1 {
     color: white;
     padding: 10px;
     margin: 5px 0;
-    text-align: center;
+    text-align: center; /* Change this line */
     border-radius: 5px;
     font-size: 18px;
+    display: flex;
+    justify-content: center; /* Add this line for better centering */
+    align-items: center;
+}
+
+#characters li a {
+    color: white;
+    text-decoration: none;
+    margin-left: 10px;
 }
 
 #characters li:hover {
     background-color: #c0392b;
     cursor: pointer;
+}
+
+/* Style des images des héros */
+.hero-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
